@@ -1,6 +1,6 @@
 Summary: A high-speed clustered L2TP LNS
 Name: l2tpns
-Version: 2.1.5
+Version: 2.1.6
 Release: 1
 Copyright: GPL
 Group: System Environment/Daemons
@@ -43,5 +43,5 @@ rm -rf %{buildroot}
 %attr(644,root,root) /usr/share/man/man[58]/*
 
 %changelog
-* Sat Sep 3 2005 Brendan O'Dea <bod@optus.net> 2.1.5-1
-- 2.1.5 release, see /usr/share/doc/l2tpns-2.1.5/Changes
+* Mon Sep 12 2005 Brendan O'Dea <bod@optus.net> 2.1.6-1
+- 2.1.6 release, see /usr/share/doc/l2tpns-2.1.6/Changes
