@@ -1,3 +1,6 @@
+* Mon Sep 12 2005 Brendan O'Dea <bod@optus.net> 2.1.6
+- Any traffic on a tunnel resets lastrec, not just control messages.
+
 * Sat Sep 3 2005 Brendan O'Dea <bod@optus.net> 2.1.5
 - Avoid Code-Reject loop.
 - Increase size of PPP buffers to MAXETHER.
